--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -32,8 +32,21 @@ $columns: 12;
     }
 }
 
-[class^="col-xs-"] {
-    float: left;
+.col-xs- {
+    &1,
+    &2,
+    &3,
+    &4,
+    &5,
+    &6,
+    &7,
+    &8,
+    &9,
+    &10,
+    &11,
+    &12 {
+        float: left;
+    }
 }
 
 @for $i from 1 through $columns {
@@ -43,8 +56,21 @@ $columns: 12;
 }
 
 @media (min-width: 768px) {
-    [class^="col-sm-"] {
-        float: left;
+    .col-sm- {
+        &1,
+        &2,
+        &3,
+        &4,
+        &5,
+        &6,
+        &7,
+        &8,
+        &9,
+        &10,
+        &11,
+        &12 {
+            float: left;
+        }
     }
 
     @for $i from 1 through $columns {
@@ -61,8 +87,21 @@ $columns: 12;
 }
 
 @media (min-width: 992px) {
-    [class^="col-md-"] {
-        float: left;
+    .col-md- {
+        &1,
+        &2,
+        &3,
+        &4,
+        &5,
+        &6,
+        &7,
+        &8,
+        &9,
+        &10,
+        &11,
+        &12 {
+            float: left;
+        }
     }
 
     @for $i from 1 through $columns {
