--- a/scss/layouts/site/parts/pnav.scss
+++ b/scss/layouts/site/parts/pnav.scss
@@ -164,7 +164,7 @@
                     z-index: 1000;
                     min-width: 150px;
                     min-width: max-content;
-                    margin: 5px 0 0;
+                    margin: 0.25rem 0 0;
                     padding: 0.25rem;
                     border: 1px solid var(--sleek-surface-border-color);
                     border-radius: 0.25rem;
