--- a/scss/widgets/pills/index.scss
+++ b/scss/widgets/pills/index.scss
@@ -62,7 +62,7 @@
             margin-top: -2px;
 
             + .text {
-                margin-left: 5px;
+                margin-left: 0.25rem;
             }
         }
 
@@ -87,7 +87,7 @@
 
     .pillsbox {
         display: inline-block;
-        margin-bottom: 25px;
+        margin-bottom: 2rem;
 
         > .panel {
             display: none;
