--- a/scss/_panel.scss
+++ b/scss/_panel.scss
@@ -131,7 +131,7 @@
         }
 
         .icon {
-            margin: -2px 5px 0 0;
+            margin: -1.25rem 0.25rem 0 0;
             font-size: 1.25rem;
         }
     }
