--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -72,7 +72,7 @@
 
     @media screen and (max-width: 767px) {
         width: 100%;
-        margin-bottom: 15px;
+        margin-bottom: 1rem;
         overflow-y: hidden;
         border: 1px solid var(--sleek-table-border-color);
     }
