--- a/scss/widgets/tabs/index.scss
+++ b/scss/widgets/tabs/index.scss
@@ -54,7 +54,7 @@
             margin-top: -2px;
 
             + .text {
-                margin-left: 5px;
+                margin-left: 0.25rem;
             }
         }
 
