--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -3,23 +3,21 @@
 @use "sass:color";
 @use "../palette";
 
-// $silver = #2a3948
-
 :root {
     --sleek-body-background-color: #{palette.$gray-950};
 
-    --sleek-surface-background-color: black;
-    --sleek-surface-shade-background-color: #{palette.$neutral-950};
+    --sleek-surface-background-color: #{palette.$neutral-950};
+    --sleek-surface-shade-background-color: #{palette.$neutral-900};
     --sleek-surface-border-color: #{palette.$stone-800};
     --sleek-surface-border-color-subtle: #{palette.$stone-900};
     --sleek-surface-highlight-border-color: #{palette.$blue};
 
-    --sleek-field-background-color: #181a1b;
+    --sleek-field-background-color: #{palette.$neutral-950};
     --sleek-field-border-color: #{palette.$stone-700};
     --sleek-field-focus-border-color: #{palette.$blue};
     --sleek-field-focus-glow-color: #{palette.$blue-800};
-    --sleek-field-disabled-background-color: #181a1b;
-    --sleek-field-disabled-color: #{rgba(white, 50%)};
+    --sleek-field-disabled-background-color: #{palette.$stone-800};
+    --sleek-field-disabled-color: #{palette.$stone-400};
     --sleek-field-disabled-focus-border-color: #{palette.$stone-600};
     --sleek-field-disabled-focus-glow-color: #{palette.$stone-900};
 
@@ -28,106 +26,59 @@
     --sleek-button-default-color: #{rgba(white, 0.9)};
     --sleek-button-icon-default-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-default-hover-border-color: #{color.scale(
-            #34475a,
-            $lightness: 10%
-        )};
+    --sleek-button-default-hover-border-color: #{palette.$neutral-500};
     --sleek-button-default-hover-color: #{rgba(white, 0.9)};
-    --sleek-button-default-hover-shadow-color: #{color.scale(
-            #34475a,
-            $lightness: 5%
-        )};
+    --sleek-button-default-hover-shadow-color: #{palette.$neutral-700};
     --sleek-button-icon-default-hover-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-default-focus-shadow-color: #{color.scale(
-            #34475a,
-            $lightness: 5%
-        )};
-    --sleek-button-default-active-background-color: #34475a;
-    --sleek-button-default-active-border-color: #{color.scale(
-            #34475a,
-            $lightness: 20%
-        )};
+    --sleek-button-default-focus-shadow-color: #{palette.$neutral-700};
+    --sleek-button-default-active-background-color: #{palette.$neutral-800};
+    --sleek-button-default-active-border-color: #{palette.$neutral-300};
     --sleek-button-default-active-color: #{rgba(white, 0.9)};
-    --sleek-button-default-active-shadow-color: #{color.scale(
-            #34475a,
-            $lightness: 5%
-        )};
+    --sleek-button-default-active-shadow-color: #{palette.$neutral-700};
     --sleek-button-icon-default-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-background-color: #{palette.$blue};
-    --sleek-button-blue-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -20%
-        )};
+
+    --sleek-button-blue-background-color: #{palette.$blue-500};
+    --sleek-button-blue-border-color: #{palette.$blue-400};
     --sleek-button-blue-color: #{rgba(white, 0.9)};
     --sleek-button-icon-blue-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-hover-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -30%
-        )};
+    --sleek-button-blue-hover-border-color: #{palette.$blue-200};
     --sleek-button-blue-hover-color: #{rgba(white, 0.9)};
-    --sleek-button-blue-hover-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
+    --sleek-button-blue-hover-shadow-color: #{palette.$blue-400};
     --sleek-button-icon-blue-hover-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-focus-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
-    --sleek-button-blue-active-background-color: #{palette.$blue};
-    --sleek-button-blue-active-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -40%
-        )};
+    --sleek-button-blue-focus-shadow-color: #{palette.$blue-400};
+    --sleek-button-blue-active-background-color: #{palette.$blue-500};
+    --sleek-button-blue-active-border-color: #{palette.$blue-50};
     --sleek-button-blue-active-color: #{rgba(white, 0.9)};
-    --sleek-button-blue-active-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
-    --sleek-button-blue-faint-background-color: #{palette.$slate-900};
-    --sleek-button-blue-faint-border-color: #{palette.$blue-800};
+    --sleek-button-blue-active-shadow-color: #{palette.$blue-400};
     --sleek-button-icon-blue-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-background-color: #181a1b;
-    --sleek-button-simple-border-color: #{color.scale(#181a1b, $lightness: 20%)};
+
+    --sleek-button-blue-faint-background-color: #{palette.$slate-900};
+    --sleek-button-blue-faint-border-color: #{palette.$blue-800};
+
+    --sleek-button-simple-background-color: #{palette.$neutral-950};
+    --sleek-button-simple-border-color: #{palette.$neutral-800};
     --sleek-button-simple-color: #{rgba(white, 0.9)};
     --sleek-button-icon-simple-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-hover-border-color: #{color.scale(
-            #181a1b,
-            $lightness: 30%
-        )};
+    --sleek-button-simple-hover-border-color: #{palette.$neutral-600};
     --sleek-button-simple-hover-color: #{rgba(white, 0.9)};
-    --sleek-button-simple-hover-shadow-color: #{color.scale(
-            #181a1b,
-            $lightness: 15%
-        )};
+    --sleek-button-simple-hover-shadow-color: #{palette.$neutral-800};
     --sleek-button-icon-simple-hover-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-focus-shadow-color: #{color.scale(
-            #181a1b,
-            $lightness: 15%
-        )};
-    --sleek-button-simple-active-background-color: #{color.scale(
-            #181a1b,
-            $lightness: 20%
-        )};
-    --sleek-button-simple-active-border-color: #{color.scale(
-            #181a1b,
-            $lightness: 40%
-        )};
+    --sleek-button-simple-focus-shadow-color: #{palette.$neutral-800};
+    --sleek-button-simple-active-background-color: #{palette.$neutral-950};
+    --sleek-button-simple-active-border-color: #{palette.$neutral-200};
     --sleek-button-simple-active-color: #{rgba(white, 0.9)};
-    --sleek-button-simple-active-shadow-color: #{color.scale(
-            #181a1b,
-            $lightness: 15%
-        )};
+    --sleek-button-simple-active-shadow-color: #{palette.$neutral-800};
     --sleek-button-icon-simple-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-subtle-hover-border-color: #454b4e;
+
+    --sleek-button-subtle-hover-border-color: #{palette.$neutral-600};
 
     --sleek-table-border-color: #{palette.$stone-900};
     --sleek-table-row-hover-border-color: #{palette.$blue};
