--- a/scss/themes/light.scss
+++ b/scss/themes/light.scss
@@ -6,135 +6,79 @@
 :root {
     --sleek-body-background-color: #{palette.$gray-50};
 
-    --sleek-surface-background-color: white;
-    --sleek-surface-shade-background-color: #{palette.$neutral-50};
+    --sleek-surface-background-color: #{palette.$neutral-50};
+    --sleek-surface-shade-background-color: #{palette.$neutral-100};
     --sleek-surface-border-color: #{palette.$stone-200};
     --sleek-surface-border-color-subtle: #{palette.$stone-100};
     --sleek-surface-highlight-border-color: #{palette.$blue};
 
-    --sleek-field-background-color: white;
+    --sleek-field-background-color: #{palette.$neutral-50};
     --sleek-field-border-color: #{palette.$stone-300};
     --sleek-field-focus-border-color: #{palette.$blue};
     --sleek-field-focus-glow-color: #{palette.$blue-200};
-    --sleek-field-disabled-background-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: 50%
-        )};
-    --sleek-field-disabled-color: #{rgba(palette.$dark, 0.75)};
+    --sleek-field-disabled-background-color: #{palette.$stone-200};
+    --sleek-field-disabled-color: #{palette.$stone-600};
     --sleek-field-disabled-focus-border-color: #{palette.$stone-400};
     --sleek-field-disabled-focus-glow-color: #{palette.$stone-100};
 
     --sleek-button-default-background-color: #{palette.$neutral-200};
     --sleek-button-default-border-color: #{palette.$neutral-300};
-    --sleek-button-default-color: #{palette.$dark};
+    --sleek-button-default-color: #{rgba(palette.$stone-950, 0.9)};
     --sleek-button-icon-default-filter: invert(18%) sepia(3%) saturate(2176%)
         hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-default-hover-border-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -30%
-        )};
-    --sleek-button-default-hover-color: #{palette.$dark};
-    --sleek-button-default-hover-shadow-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -15%
-        )};
+    --sleek-button-default-hover-border-color: #{palette.$neutral-500};
+    --sleek-button-default-hover-color: #{rgba(palette.$stone-950, 0.9)};
+    --sleek-button-default-hover-shadow-color: #{palette.$neutral-300};
     --sleek-button-icon-default-hover-filter: invert(18%) sepia(3%)
         saturate(2176%) hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-default-focus-shadow-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -15%
-        )};
-    --sleek-button-default-active-background-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -20%
-        )};
-    --sleek-button-default-active-border-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -40%
-        )};
-    --sleek-button-default-active-color: #{palette.$dark};
-    --sleek-button-default-active-shadow-color: #{color.scale(
-            palette.$stone-200,
-            $lightness: -15%
-        )};
+    --sleek-button-default-focus-shadow-color: #{palette.$neutral-300};
+    --sleek-button-default-active-background-color: #{palette.$neutral-200};
+    --sleek-button-default-active-border-color: #{palette.$neutral-700};
+    --sleek-button-default-active-color: #{rgba(palette.$stone-950, 0.9)};
+    --sleek-button-default-active-shadow-color: #{palette.$neutral-300};
     --sleek-button-icon-default-active-filter: invert(18%) sepia(3%)
         saturate(2176%) hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-blue-background-color: #{palette.$blue};
-    --sleek-button-blue-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -20%
-        )};
+
+    --sleek-button-blue-background-color: #{palette.$blue-500};
+    --sleek-button-blue-border-color: #{palette.$blue-600};
     --sleek-button-blue-color: #{rgba(white, 0.9)};
     --sleek-button-icon-blue-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-hover-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -30%
-        )};
+    --sleek-button-blue-hover-border-color: #{palette.$blue-800};
     --sleek-button-blue-hover-color: #{rgba(white, 0.9)};
-    --sleek-button-blue-hover-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
+    --sleek-button-blue-hover-shadow-color: #{palette.$blue-600};
     --sleek-button-icon-blue-hover-filter: invert(100%) sepia(100%) saturate(0%)
         hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-blue-focus-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
-    --sleek-button-blue-active-background-color: #{palette.$blue};
-    --sleek-button-blue-active-border-color: #{color.scale(
-            palette.$blue,
-            $lightness: -40%
-        )};
+    --sleek-button-blue-focus-shadow-color: #{palette.$blue-600};
+    --sleek-button-blue-active-background-color: #{palette.$blue-500};
+    --sleek-button-blue-active-border-color: #{palette.$blue-950};
     --sleek-button-blue-active-color: #{rgba(white, 0.9)};
-    --sleek-button-blue-active-shadow-color: #{color.scale(
-            palette.$blue,
-            $lightness: -15%
-        )};
-    --sleek-button-blue-faint-background-color: #{palette.$slate-100};
-    --sleek-button-blue-faint-border-color: #{palette.$blue-200};
+    --sleek-button-blue-active-shadow-color: #{palette.$blue-600};
     --sleek-button-icon-blue-active-filter: invert(100%) sepia(100%)
         saturate(0%) hue-rotate(125deg) brightness(103%) contrast(103%);
-    --sleek-button-simple-background-color: white;
-    --sleek-button-simple-border-color: #{color.scale(white, $lightness: -20%)};
-    --sleek-button-simple-color: #{palette.$dark};
+
+    --sleek-button-blue-faint-background-color: #{palette.$slate-100};
+    --sleek-button-blue-faint-border-color: #{palette.$blue-200};
+
+    --sleek-button-simple-background-color: #{palette.$neutral-50};
+    --sleek-button-simple-border-color: #{palette.$neutral-200};
+    --sleek-button-simple-color: #{rgba(palette.$stone-950, 0.9)};
     --sleek-button-icon-simple-filter: invert(18%) sepia(3%) saturate(2176%)
         hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-simple-hover-border-color: #{color.scale(
-            white,
-            $lightness: -30%
-        )};
-    --sleek-button-simple-hover-color: #{palette.$dark};
-    --sleek-button-simple-hover-shadow-color: #{color.scale(
-            white,
-            $lightness: -15%
-        )};
+    --sleek-button-simple-hover-border-color: #{palette.$neutral-400};
+    --sleek-button-simple-hover-color: #{rgba(palette.$stone-950, 0.9)};
+    --sleek-button-simple-hover-shadow-color: #{palette.$neutral-200};
     --sleek-button-icon-simple-hover-filter: invert(18%) sepia(3%)
         saturate(2176%) hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-simple-focus-shadow-color: #{color.scale(
-            white,
-            $lightness: -15%
-        )};
-    --sleek-button-simple-active-background-color: #{color.scale(
-            white,
-            $lightness: -20%
-        )};
-    --sleek-button-simple-active-border-color: #{color.scale(
-            white,
-            $lightness: -40%
-        )};
-    --sleek-button-simple-active-color: #{palette.$dark};
-    --sleek-button-simple-active-shadow-color: #{color.scale(
-            white,
-            $lightness: -15%
-        )};
+    --sleek-button-simple-focus-shadow-color: #{palette.$neutral-200};
+    --sleek-button-simple-active-background-color: #{palette.$neutral-50};
+    --sleek-button-simple-active-border-color: #{palette.$neutral-800};
+    --sleek-button-simple-active-color: #{rgba(palette.$stone-950, 0.9)};
+    --sleek-button-simple-active-shadow-color: #{palette.$neutral-200};
     --sleek-button-icon-simple-active-filter: invert(18%) sepia(3%)
         saturate(2176%) hue-rotate(169deg) brightness(88%) contrast(88%);
-    --sleek-button-subtle-hover-border-color: #{color.scale(
-            white,
-            $lightness: -30%
-        )};
+
+    --sleek-button-subtle-hover-border-color: #{palette.$neutral-400};
 
     --sleek-table-border-color: #{palette.$stone-100};
     --sleek-table-row-hover-border-color: #{palette.$blue};
