--- a/scss/widgets/dropdown/dark.scss
+++ b/scss/widgets/dropdown/dark.scss
@@ -4,4 +4,5 @@
 
 :root {
     --sleek-dropdown-item-hover-background-color: #{palette.$slate-900};
+    --sleek-dropdown-divider-border-color: #{palette.$slate-900};
 }
