Set default label background color

--- a/scss/_label.scss
+++ b/scss/_label.scss
@@ -3,4 +3,5 @@
 .label {
     padding: 0.125rem 0.25rem;
     border-radius: 0.25rem;
+    background-color: var(--sleek-label-default-background-color);
 }
