--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -121,6 +121,8 @@
         )};
     --sleek-alert-subtle-color: #{palette.$stone-300};
 
+    --sleek-label-default-background-color: #{rgba(palette.$silver-400, 0.2)};
+
     --sleek-text-default-color: #{rgba(palette.$stone-50, 0.9)};
     --sleek-text-muted-color: #{palette.$stone-400};
 
