--- a/scss/themes/light.scss
+++ b/scss/themes/light.scss
@@ -139,6 +139,8 @@
         )};
     --sleek-alert-subtle-color: #{palette.$stone-700};
 
+    --sleek-label-default-background-color: #{rgba(palette.$silver-600, 0.1)};
+
     --sleek-text-default-color: #{rgba(palette.$stone-950, 0.9)};
     --sleek-text-muted-color: #{palette.$stone-600};
 
