Tweak blue palette

--- a/scss/_palette.scss
+++ b/scss/_palette.scss
@@ -110,11 +110,11 @@ $stone-800: #292524;
 $stone-900: #1c1917;
 $stone-950: #0c0a09;
 
-$blue-50: #d1e8f7;
-$blue-100: #c0dff4;
-$blue-200: #9dcdee;
-$blue-300: #7bbbe8;
-$blue-400: #58aae2;
+$blue-50: #e5f2fb;
+$blue-100: #d1e8f7;
+$blue-200: #aad4f0;
+$blue-300: #83c0ea;
+$blue-400: #5cace3;
 $blue-500: #3598dc; // Base
 $blue-600: #207bb9;
 $blue-700: #185b89;
