Replace badge with label

--- a/scss/_color.scss
+++ b/scss/_color.scss
@@ -10,19 +10,20 @@
     .font-#{$name} {
         color: $code !important;
     }
-
-    .border-#{$name} {
-        border-color: $code !important;
-    }
 }
 
 @include color("dark", var(--sleek-text-default-color));
-@include color("ebony", palette.$ebony);
 @include color("blue", palette.$blue);
 @include color("green", palette.$green);
 @include color("red", palette.$red);
 @include color("orange", palette.$orange);
 @include color("white", white);
+
+@each $c in "dark" "blue" "green" "red" "orange" {
+    .border-#{$c} {
+        border-color: var(--sleek-border-color-#{$c}) !important;
+    }
+}
 
 .font-muted {
     color: var(--sleek-text-muted-color);
