--- a/scss/widgets/strips/index.scss
+++ b/scss/widgets/strips/index.scss
@@ -54,13 +54,17 @@
         .text + .icon {
             margin-left: 0.5rem;
         }
+
+        .label {
+            padding: 0 0.5rem;
+        }
     }
 }
 
 @media (max-width: 991px) {
     .strips {
         > :not(.-active),
-        .badge {
+        .label {
             display: none;
         }
     }
