--- a/scss/layouts/arena/index.scss
+++ b/scss/layouts/arena/index.scss
@@ -98,10 +98,11 @@ body {
             padding: 8px;
         }
 
-        .badge {
+        .label {
             position: absolute;
             bottom: 0;
             right: 0;
+            padding: 0 0.5rem;
             background-color: rgba(palette.$red, 75%);
             color: white;
         }
@@ -180,6 +181,11 @@ body {
 
         .icon {
             margin: -0.125rem 0.25rem 0 0;
+        }
+
+        .label {
+            padding: 0 0.5rem;
+            color: white;
         }
     }
 }
