--- a/scss/widgets/switch/index.scss
+++ b/scss/widgets/switch/index.scss
@@ -7,9 +7,9 @@
     position: relative;
     display: inline-block;
 
-    &--readonly {
+    &.-readonly {
         .switch__toggle::after {
-            background-color: palette.$stone-200;
+            background-color: var(--sleek-field-disabled-background-color);
             box-shadow: none;
             cursor: default;
         }
@@ -19,13 +19,13 @@
         display: none;
 
         &:checked + .switch__toggle::before {
-            background-color: rgba(palette.$blue, 0.05);
+            background-color: var(--sleek-button-blue-faint-background-color);
         }
 
         &:checked + .switch__toggle::after {
             left: 20px;
-            border-color: palette.$blue;
-            background-color: palette.$blue;
+            border-color: var(--sleek-field-focus-border-color);
+            background-color: var(--sleek-field-focus-border-color);
         }
     }
 
@@ -51,7 +51,7 @@
             height: 100%;
             border: 1px solid var(--sleek-field-border-color);
             border-radius: 0.25rem;
-            box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.075);
+            box-shadow: inset 0 0.125rem 0.125rem var(--sleek-shadow-color-0);
             transition: background-color const.$fast ease;
         }
 
@@ -64,7 +64,7 @@
             border: 1px solid var(--sleek-field-border-color);
             border-radius: 0.25rem;
             background-color: var(--sleek-field-background-color);
-            box-shadow: 0 1px 0 rgba(palette.$dark, 0.075);
+            box-shadow: 0 0.125rem 0.125rem var(--sleek-shadow-color-0);
             transition: left const.$fast ease;
         }
     }
