Tweak progress style

--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -120,6 +120,8 @@
     --sleek-link-muted-color: #{rgba(white, 0.7)};
     --sleek-link-muted-hover-color: #{rgba(white, 0.9)};
 
+    --sleek-progress-background-color: #{palette.$stone-800};
+
     --sleek-divider-border-color: #{palette.$stone-800};
 
     --sleek-border-color-dark: #{rgba(palette.$stone-50, 0.9)};
