--- a/scss/themes/light.scss
+++ b/scss/themes/light.scss
@@ -126,6 +126,8 @@
     --sleek-link-muted-color: #{palette.$muted};
     --sleek-link-muted-hover-color: #{palette.$dark};
 
+    --sleek-progress-background-color: #{palette.$stone-200};
+
     --sleek-divider-border-color: #{palette.$stone-200};
 
     --sleek-border-color-dark: #{rgba(palette.$stone-950, 0.9)};
