--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -6,7 +6,7 @@
     display: flex;
     height: 1rem;
     overflow: hidden;
-    box-shadow: inset 0 0.0625rem 0.125rem rgba(palette.$dark, 0.125);
+    background-color: var(--sleek-progress-background-color);
 
     &__bar {
         width: 0;
