--- a/scss/themes/dark.scss
+++ b/scss/themes/dark.scss
@@ -124,6 +124,12 @@
 
     --sleek-divider-border-color: #{palette.$stone-800};
 
+    --sleek-background-color-dark: #{rgba(palette.$stone-50, 0.9)};
+    --sleek-background-color-blue: #{palette.$blue-500};
+    --sleek-background-color-green: #{palette.$green-500};
+    --sleek-background-color-red: #{palette.$red-500};
+    --sleek-background-color-orange: #{palette.$orange-500};
+
     --sleek-border-color-dark: #{rgba(palette.$stone-50, 0.9)};
     --sleek-border-color-blue: #{palette.$blue-500};
     --sleek-border-color-green: #{palette.$green-500};
