--- a/scss/layouts/arena/index.scss
+++ b/scss/layouts/arena/index.scss
@@ -131,6 +131,7 @@ body {
             height: 0.25rem;
             border-bottom: 1px solid white;
             border-radius: 0;
+            background-color: transparent;
 
             .progress__bar {
                 background-color: white;
