--- a/scss/_palette.scss
+++ b/scss/_palette.scss
@@ -38,6 +38,30 @@ $amber-800: #92400e;
 $amber-900: #78350f;
 $amber-950: #451a03;
 
+$yellow-50: #fefce8;
+$yellow-100: #fef9c3;
+$yellow-200: #fef08a;
+$yellow-300: #fde047;
+$yellow-400: #facc15;
+$yellow-500: #eab308;
+$yellow-600: #ca8a04;
+$yellow-700: #a16207;
+$yellow-800: #854d0e;
+$yellow-900: #713f12;
+$yellow-950: #422006;
+
+$lime-50: #f7fee7;
+$lime-100: #ecfccb;
+$lime-200: #d9f99d;
+$lime-300: #bef264;
+$lime-400: #a3e635;
+$lime-500: #84cc16;
+$lime-600: #65a30d;
+$lime-700: #4d7c0f;
+$lime-800: #3f6212;
+$lime-900: #365314;
+$lime-950: #1a2e05;
+
 $green-50: #f0fdf4;
 $green-100: #dcfce7;
 $green-200: #bbf7d0;
@@ -61,6 +85,18 @@ $sky-700: #0369a1;
 $sky-800: #075985;
 $sky-900: #0c4a6e;
 $sky-950: #082f49;
+
+$violet-50: #f5f3ff;
+$violet-100: #ede9fe;
+$violet-200: #ddd6fe;
+$violet-300: #c4b5fd;
+$violet-400: #a78bfa;
+$violet-500: #8b5cf6;
+$violet-600: #7c3aed;
+$violet-700: #6d28d9;
+$violet-800: #5b21b6;
+$violet-900: #4c1d95;
+$violet-950: #2e1065;
 
 $purple-50: #faf5ff;
 $purple-100: #f3e8ff;
@@ -109,6 +145,18 @@ $gray-700: #374151;
 $gray-800: #1f2937;
 $gray-900: #111827;
 $gray-950: #030712;
+
+$zinc-50: #fafafa;
+$zinc-100: #f4f4f5;
+$zinc-200: #e4e4e7;
+$zinc-300: #d4d4d8;
+$zinc-400: #a1a1aa;
+$zinc-500: #71717a;
+$zinc-600: #52525b;
+$zinc-700: #3f3f46;
+$zinc-800: #27272a;
+$zinc-900: #18181b;
+$zinc-950: #09090b;
 
 $neutral-50: #fafafa;
 $neutral-100: #f5f5f5;
