--- a/scss/widgets/handle/dark.scss
+++ b/scss/widgets/handle/dark.scss
@@ -1,44 +1,42 @@
 // Copyright 2026 Furqan Software Ltd. All Rights Reserved.
 
 @use "sass:color";
-
-$handle-default: #a1a1aa; // zinc-400
-$handle-sss: #f43f5e; // rose-500
-$handle-ss: #f59e0b; // amber-500
-$handle-s: #facc15; // yellow-400
-$handle-a: #fed348; // yellow-400
-$handle-b: #a3e635; // lime-400
-$handle-c: #0ea5e9; // sky-500
-$handle-e: #a78bfa; // violet-400
+@use "../../palette";
 
 :root {
-    --sleek-handle-default-color: #{color.scale(
-            $handle-default,
-            $lightness: 15%
-        )};
-    --sleek-handle-sss-color: #{color.scale($handle-sss, $lightness: 15%)};
-    --sleek-handle-ss-color: #{color.scale($handle-ss, $lightness: 15%)};
-    --sleek-handle-s-color: #{color.scale($handle-s, $lightness: 15%)};
-    --sleek-handle-a-color: #{color.scale($handle-a, $lightness: 15%)};
-    --sleek-handle-b-color: #{color.scale($handle-b, $lightness: 15%)};
-    --sleek-handle-c-color: #{color.scale($handle-c, $lightness: 15%)};
-    --sleek-handle-e-color: #{color.scale($handle-e, $lightness: 15%)};
+    --sleek-handle-default-color: #{palette.$zinc-300};
+    --sleek-handle-sss-color: #{palette.$rose-300};
+    --sleek-handle-ss-color: #{palette.$amber-300};
+    --sleek-handle-s-color: #{palette.$yellow-300};
+    --sleek-handle-a-color: #{palette.$yellow-300};
+    --sleek-handle-b-color: #{palette.$lime-300};
+    --sleek-handle-c-color: #{palette.$sky-300};
+    --sleek-handle-e-color: #{palette.$violet-300};
 
-    --sleek-handle-default-background-color: #{rgba($handle-default, 0.15)};
-    --sleek-handle-sss-background-color: #{rgba($handle-sss, 0.15)};
-    --sleek-handle-ss-background-color: #{rgba($handle-ss, 0.15)};
-    --sleek-handle-s-background-color: #{rgba($handle-s, 0.15)};
-    --sleek-handle-a-background-color: #{rgba($handle-a, 0.15)};
-    --sleek-handle-b-background-color: #{rgba($handle-b, 0.15)};
-    --sleek-handle-c-background-color: #{rgba($handle-c, 0.15)};
-    --sleek-handle-e-background-color: #{rgba($handle-e, 0.15)};
+    --sleek-handle-default-background-color: #{palette.$zinc-950};
+    --sleek-handle-sss-background-color: #{palette.$rose-950};
+    --sleek-handle-ss-background-color: #{palette.$amber-950};
+    --sleek-handle-s-background-color: #{palette.$yellow-950};
+    --sleek-handle-a-background-color: #{palette.$yellow-950};
+    --sleek-handle-b-background-color: #{palette.$lime-950};
+    --sleek-handle-c-background-color: #{palette.$sky-950};
+    --sleek-handle-e-background-color: #{palette.$violet-950};
 
-    --sleek-handle-default-glow-background-color: #{rgba($handle-default, 0.2)};
-    --sleek-handle-sss-glow-background-color: #{rgba($handle-sss, 0.2)};
-    --sleek-handle-ss-glow-background-color: #{rgba($handle-ss, 0.2)};
-    --sleek-handle-s-glow-background-color: #{rgba($handle-s, 0.2)};
-    --sleek-handle-a-glow-background-color: #{rgba($handle-a, 0.2)};
-    --sleek-handle-b-glow-background-color: #{rgba($handle-b, 0.2)};
-    --sleek-handle-c-glow-background-color: #{rgba($handle-c, 0.2)};
-    --sleek-handle-e-glow-background-color: #{rgba($handle-e, 0.2)};
+    --sleek-handle-default-hover-color: #{palette.$zinc-200};
+    --sleek-handle-sss-hover-color: #{palette.$rose-200};
+    --sleek-handle-ss-hover-color: #{palette.$amber-200};
+    --sleek-handle-s-hover-color: #{palette.$yellow-200};
+    --sleek-handle-a-hover-color: #{palette.$yellow-200};
+    --sleek-handle-b-hover-color: #{palette.$lime-200};
+    --sleek-handle-c-hover-color: #{palette.$sky-200};
+    --sleek-handle-e-hover-color: #{palette.$violet-200};
+
+    --sleek-handle-default-hover-background-color: #{palette.$zinc-900};
+    --sleek-handle-sss-hover-background-color: #{palette.$rose-900};
+    --sleek-handle-ss-hover-background-color: #{palette.$amber-900};
+    --sleek-handle-s-hover-background-color: #{palette.$yellow-900};
+    --sleek-handle-a-hover-background-color: #{palette.$yellow-900};
+    --sleek-handle-b-hover-background-color: #{palette.$lime-900};
+    --sleek-handle-c-hover-background-color: #{palette.$sky-900};
+    --sleek-handle-e-hover-background-color: #{palette.$violet-900};
 }
