Make arena phead sticky on larger displays

--- a/scss/layouts/arena/index.scss
+++ b/scss/layouts/arena/index.scss
@@ -226,6 +226,13 @@ body {
 }
 
 @media (min-width: 992px) {
+    .phead {
+        position: sticky;
+        top: 0;
+        z-index: 1;
+        background-color: var(--sleek-arena-body-background-color);
+    }
+
     .pmenu__item.-bars {
         display: none;
     }
